# model-recommender

./: CHANGELOG.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py  recommender.py  router.py  server.py
config/: models.json  policy.json
