[project]
name = "model-router"
version = "0.1.0"
description = "Dependency-free lightweight model selection and routing service for AGenNext"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
